# ffi-callback

./: Cargo.toml  build.rs
accumulator/: Cargo.toml
accumulator/src/: lib.rs
accumulator/tests/: callback.rs  callback_async.rs  callback_sync.rs
inc/: mylib.c  mylib.h
src/: bindings.rs  lib.rs  main.rs  ws.rs
tests/: callback.rs  callback_async.rs  callback_sync.rs
