[package]
name = "accumulator-ws"
version = "0.1.0"
edition = "2018"

[workspace]
members = ["accumulator"]

[dependencies]
accumulator = { path = "./accumulator"}

env_logger = "0.7.1"
futures = { version = "0.3", default-features = false }
futures-util = "0.3.5"
log = "0.4.11"
serde = {version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
